2006-01-23  Crispin Flowerday  <gnome@flowerday.cx>

	* src/bookmarks/ephy-open-tabs-action.c: (node_added_cb):
	* src/bookmarks/ephy-topic-action-group.c: (node_added_cb):

	Fix a couple of memory leaks

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:
	
	Fix compilation with libgnome 2.13. Bug #328351.

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* data/epiphany-service.xml:
	* src/ephy-activation.c: (ephy_activation_load_url),
	(ephy_activation_open_bookmarks_editor):
	* src/ephy-activation.h:

	Removed add-bookmark and import-bookmarks functions,
	and changed load-url to use an options string instead of
	loads of booleans.
	
	* src/ephy-main.c: (unref_proxy_reply_cb), (open_urls),
	(call_dbus_proxy):

	Adapt to changed dbus call signatures.
	Fixes open-in-new-tab/window from cmd line.

2006-01-23  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/MozDownload.cpp:
	* lib/ephy-file-helpers.c: (ephy_file_helpers_init),
	(ephy_ensure_dir_exists):
	* lib/ephy-file-helpers.h:

	Add a GError** to ephy_file_helpers_init and ephy_ensure_dir_exists,
	so we can show the error to the user in main().

	* src/ephy-dbus.c: (ephy_dbus_connect_to_session_bus_cb),
	(ephy_dbus_connect_to_system_bus_cb), (session_filter_func),
	(system_filter_func), (ephy_dbus_connect_to_system_bus),
	(ephy_dbus_connect_to_session_bus), (ephy_dbus_shutdown),
	(ephy_dbus_finalize), (ephy_dbus_get_type),
	(ephy_dbus_get_default), (ephy_dbus_get_bus),
	(ephy_dbus_get_proxy), (_ephy_dbus_startup), (_ephy_dbus_release),
	(_ephy_dbus_is_name_owner):
	* src/ephy-dbus.h:

	Refactored. Propagate errors to callers via GError**, and change
	lifecycle to the app lifetime.

	* src/ephy-lockdown.c: (ephy_lockdown_init),
	(ephy_lockdown_finalize):

	Move gconf notification add/remove for the lockdown key dirs 
	here from main().

	* src/ephy-shell.c: (ephy_shell_dispose),
	(_ephy_shell_create_instance):
	* src/ephy-shell.h:
	* src/epiphany.defs:
